2002-01-07  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/vfw32.def (LIBRARY): Change to MSVFW32.DLL.

2002-01-04  TAMURA Kent  <tkent@users.sourceforge.net>

	* include/wingdi.h (BI_JPEG, BI_PNG, GGO_BEZIER,GGO_UNHINTED,
	 LAYOUT_RTL, LAYOUT_BITMAPORIENTATIONPRESERVED): Add defines.
	* include/winuser.h (HWND_MESSAGE, WS_EX_COMPOSITED,
	WS_EX_LAYERED, WS_EX_LAYOUTRTL, WS_EX_NOACTIVATE,
	WS_EX_NOINHERITLAYOUT): Add defines.
	* include/winnt.h (PF_RDTSC_INSTRUCTION_AVAILABLE,
	PF_PAE_ENABLED, MEM_PHYSICAL, MEM_RESET, MEM_TOP_DOWN,
	MEM_WRITE_WATCH): Add defines.


2002-01-04  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h (InitializeCriticalSectionAndSpinCount):
	Add prototype.
	(SetCriticalSectionSpinCount): Likewise.

2001-12-15  Andrew Begel  <abegel@eecs.berkeley.edu>

	*include/winbase.h (CreateHardLink): Correct typo in UNICODE
	mappings.

2001-12-11  Phillip Susi  <psusi@cfl.rr.com>

	* include/commctrl.h (ACS_*): Add new defines.
	(PGS_*): Ditto.
	(CBES_*): Ditto.
	(TBSTYLE_*): Ditto.
	(TB_*): Ditto.
	(TTS_*): Ditto.
	(UDS_HOTTRACK): Add define.
	(SBT_TOOLTIPS): Ditto.
	(TBS_*): Add new defines.
	(HDS_*): Ditto.
	(LVS_EX_*) Ditto.
	(LVKF_*): Ditto.
	(TCM_GETEXTENDEDSTYLE): Add define.
	(TVS_NOHSCROLL): Ditto.
	(TVIF_INTEGRAL): Ditto.
	(DTS_SHORTDATECENTURYFORMAT): Ditto.
	(TCS_*): Add new defines.
	(CBEM_*): Add defines.
	(tagNMITEMACTIVATE): Add structure definition and typedefs.
	(tagTVITEMEX[AW]: Ditto.
	(tagTVINSERTSTRUCT[AW]: Add union member.
	* include/winbase.h (VirtualAllocEx): Add prototype.
	* include/winuser.h (SS_*): Add new defines.

2001-12-07  Earnie Boyd  <earnie@users.sf.net>

	* Makefile.in: Increment VERSION.
	* include/w32api.h: Ditto.

2001-12-07  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/setupi.h (SetupDiCreateDeviceInterfaceRegKey[AW],
	SetupDiCreateDevRegKey[AW],SetupDiDeleteDeviceInterfaceRegKey,
	SetupDiDeleteDevRegKey,SetupDiOpenClassRegKey,