@@ -24,9 +24,9 @@
 ;  DISCLAMED. This includes but is not limited to warrenties of
 ;  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 ;
-; $Revision: 1.2 $
-; $Author: earnie $
-; $Date: 2001-06-05 00:26:30 $
+; $Revision: 1.3 $
+; $Author: dannysmith $
+; $Date: 2002-01-11 19:52:49 $
 ;
 EXPORTS
 _CIacos
@@ -546,7 +546,7 @@ asctime
 asin
 atan
 atan2
-atexit
+atexit DATA
 atof
 atoi
 atol
