@@ -1,3 +1,10 @@
+2001-02-11  Timothy J. Wood  <tjw@omnigroup.com>
+
+	* include/winuser.h (MONITORENUMPROC): Add typedef.
+	(EnumDisplayMonitors): Add prototype.
+	* lib/user32.def (EnumDisplayMonitors): Add stub.
+	
+
 2002-01-07  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* lib/vfw32.def (LIBRARY): Change to MSVFW32.DLL.
